# satgalaxy-core

./: CMakeLists.txt  LICENSE  README.MD  gen.py
cadical-rel-2.1.3/: CMakeLists.txt
cadical-rel-2.1.3/src/: cadical.hpp  collect.cpp  contract.hpp  cover.hpp  drattracer.cpp  external.cpp  external.hpp  file.cpp  internal.cpp  internal.hpp  message.cpp  message.hpp  options.cpp  options.hpp  proof.cpp  proof.hpp  propagate.cpp  random.cpp  reap.cpp  report.cpp  resources.cpp  solution.cpp  solver.cpp  stats.cpp  stats.hpp  terminal.cpp  version.cpp  vivify.cpp
cmake/: config.cmake
examples/: CMakeLists.txt  minisat.cc
glucose-4.2.1/: CMakeLists.txt
glucose-4.2.1/core/: Solver.cc  Solver.h  lcm.cc
glucose-4.2.1/simp/: SimpSolver.cc
glucose-4.2.1/utils/: Options.cc  Options.h
minisat/: CMakeLists.txt
minisat/cmake/: native.cmake  wasm.cmake
minisat/minisat/core/: Solver.cc  Solver.h
minisat/minisat/simp/: SimpSolver.cc
minisat/minisat/utils/: Options.cc  Options.h  System.cc  System.h
picosat-960/: CMakeLists.txt  picosat.c  picosat.h
